# rlvr-gym

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
docs/benchmark_artifacts/: README.md
docs/benchmark_artifacts/deduction_grid/: baseline_results.md  benchmark_spec.json  diversity_summary.md  split_manifest.json
docs/benchmark_artifacts/graph_planning/: baseline_results.md  benchmark_spec.json  diversity_summary.md  split_manifest.json
docs/benchmark_artifacts/scheduling/: baseline_results.md  benchmark_spec.json  diversity_summary.md  split_manifest.json
docs/benchmark_artifacts/sokoban/: baseline_results.md  benchmark_spec.json  diversity_summary.md  split_manifest.json
docs/benchmark_artifacts/symbolic_transformation/: baseline_results.md  benchmark_spec.json  diversity_summary.md  split_manifest.json
docs/benchmark_cards/: README.md  deduction_grid.md  graph_planning.md  scheduling.md  sokoban.md  symbolic_transformation.md
examples/: basic_usage.py
scripts/: build_benchmark_artifacts.py
src/rlvr_gym/: __init__.py  cli.py  registry.py
src/rlvr_gym.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rlvr_gym/core/: __init__.py  exporters.py  family.py  oracle.py  reward.py  runtime.py  types.py  utils.py  verifier.py
src/rlvr_gym/families/: __init__.py  deduction_grid.py  graph_planning.py  scheduling.py  sokoban.py  symbolic_transformation.py
tests/: test_rlvr_gym.py
